--- a/html/index-EN.html
+++ b/html/index-EN.html
@@ -18,7 +18,7 @@
         <div class="right-header">
             <a href="/html/index-KA.html"><b>KA</b></a>
             <a href="#">|</a>
-            <a href="/html/index.html"><b>RU</b></a>
+            <a href="/index.html"><b>RU</b></a>
         </div>
     </header>
     <div class="welcome">
