--- a/html/index-KA.html
+++ b/html/index-KA.html
@@ -16,7 +16,7 @@
             <img src="/images/459921974_823505639647015_4352499916589852866_n-removebg-preview.png" alt="">
         </div>
         <div class="right-header">
-            <a href="/html/index.html"><b>RU</b></a>
+            <a href="/index.html"><b>RU</b></a>
             <a href="#">|</a>
             <a href="/html/index-EN.html"><b>EN</b></a>
         </div>
