--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Dry-Cleaning Tbilisi</title>
-    <link rel="stylesheet" href="/style.css">
+    <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100..900;1,100..900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
@@ -13,12 +13,12 @@
 <body>
     <header class="header">
         <div class="left-header">
-            <img src="/images/459921974_823505639647015_4352499916589852866_n-removebg-preview.png" alt="">
+            <img src="images/459921974_823505639647015_4352499916589852866_n-removebg-preview.png" alt="">
         </div>
         <div class="right-header">
-            <a href="/html/index-KA.html"><b>KA</b></a>
+            <a href="html/index-KA.html"><b>KA</b></a>
             <a href="#">|</a>
-            <a href="/html/index-EN.html"><b>EN</b></a>
+            <a href="html/index-EN.html"><b>EN</b></a>
         </div>
     </header>
     <div class="welcome">
@@ -45,30 +45,30 @@
         </div>
         <div class="right-box">
             <!-- <img src="./images/shutterstock_648398551-min.jpg" alt=""> -->
-            <img src="/images/beautiful-car-washing-service_23.jpg" alt="">
+            <img src="images/beautiful-car-washing-service_23.jpg" alt="">
         </div>
     </div>
     <div class="service-inforamtion">
         <div class="car-wash">
-            <img src="/images/download (1).png" alt="">
+            <img src="images/download (1).png" alt="">
             <b>Бесконтактная мойка</b>
         </div>
         <div class="spray">
-            <img src="/images/download (2).png" alt="">
+            <img src="images/download (2).png" alt="">
             <b>Материалы безопасности</b>
         </div>
         <div class="equipment">
-            <img src="/images/download (3).png" alt="">
+            <img src="images/download (3).png" alt="">
             <b>Современное оборудование</b>
         </div>
         <div class="cleaning">
-            <img src="/images/download.png" alt="">
+            <img src="images/download.png" alt="">
             <b>Комплексная очистка</b>
         </div>
     </div>
     <div class="washing">
         <div class="left-washing-box">
-            <img src="/images/beskontaktnaya-mojka-avtomobilya.jpg" alt="">
+            <img src="images/beskontaktnaya-mojka-avtomobilya.jpg" alt="">
         </div>
         <div class="right-washing-box">
             <h1>Профессиональная мойка и чистка</h1>
@@ -104,19 +104,19 @@
         <span>Мы знаем, что ваше время ценно</span>
         <div class="progress-inforamtion">
             <div class="progress-box">
-                <img src="/images/download (4).png" alt="">
+                <img src="images/download (4).png" alt="">
                 <p>1. Бронирование</p>
             </div>
             <div class="progress-box">
-                <img src="/images/download (5).png" alt="">
+                <img src="images/download (5).png" alt="">
                 <p>2. Осмотр</p>
             </div>
             <div class="progress-box">
-                <img src="/images/download (6).png" alt="">
+                <img src="images/download (6).png" alt="">
                 <p>3. Оценка</p>
             </div>
             <div class="progress-box">
-                <img src="/images/download (7).png" alt="">
+                <img src="images/download (7).png" alt="">
                 <p>4. Завершение</p>
             </div>
         </div>
